    (He Yongqiang via namit)

    HIVE-1377. getPartitionDescFromPath() in CombineHiveInputFormat should
    handle matching by path
    (Paul Yang via Ning Zhang)

    HIVE-1388. combinehiveinputformat does not work if files are of different
    types
    (Namit Jain via Ning Zhang)

    HIVE-1373. Missing connection pool plugin in Eclipse classpath.
    (Vinithra via athusoo)

    HIVE-1407. Add hadoop-*-tools.jar to eclipse classpath
    (Carl Steinbach via Ning Zhang)

Release 0.5.0 -  Unreleased

  INCOMPATIBLE CHANGES

    HIVE-236. RLIKE/REGEXP allowing matching of partial strings.
    (Paul Yang via zshao)

  NEW FEATURES

    HIVE-743. Let user specify serde for custom scripts.
    (Namit Jain via rmurthy)

    HIVE-749. add hive.optimize.pruner
    (Zheng Shao via namit)

    HIVE-693. Add a AWS S3 log format deserializer
    (Zheng Shao and Andraz Tori via namit)

    HIVE-699. Functions with variable length arguments
    (Zheng Shao via namit)

    HIVE-713. Integrate operator counters into query plan to view progress of
    queries. (Namit Jain and Raghu Murthy via zshao)

    HIVE-187. Preliminary ODBC Support. (Eric Hwang via rmurthy)

    HIVE-708. Add TypedBytes SerDe for transform. (Namit Jain via zshao)

    HIVE-777. CREATE TABLE with STRUCT type. (He Yongqiang via zshao)

    HIVE-792. Support "add archive" in addition to "add file" and "add jar".
    (He Yongqiang via zshao)

    HIVE-645. UDF to run JDBC
    (Edward Capriolo via namit)

    HIVE-785. Add RecordWriter for ScriptOperator. (Namit Jain via zshao)

    HIVE-687. Add UDF unhex. (Mihir Kedia via namit)

    HIVE-591. Add Unique Join. (Emil Ibrishimov via namit)

    HIVE-667. Provide hive ql to check table/partition status.
    (Yongqiang He via zshao)

    HIVE-843. Add UDFs for hour, minute and second
    (Zheng Shao via namit)

    HIVE-854. Provide for post-execute hooks.
    (Namit Jain via rmurthy)

    HIVE-853. Provide hints for controlling join order