@@ -802,6 +802,10 @@ name|RecordWriter
 index|[]
 name|outWriters
 decl_stmt|;
+name|int
+name|timeOut
+decl_stmt|;
+comment|// JT timeout in msec.
 specifier|public
 name|FSPaths
 parameter_list|()
@@ -845,6 +849,22 @@ name|RecordWriter
 index|[
 name|numFiles
 index|]
+expr_stmt|;
+comment|// Timeout is chosen to make sure that even if one iteration takes more than
+comment|// half of the script.timeout but less than script.timeout, we will still
+comment|// be able to report progress.
+name|timeOut
+operator|=
+name|hconf
+operator|.
+name|getInt
+argument_list|(
+literal|"mapred.healthChecker.script.timeout"
+argument_list|,
+literal|600000
+argument_list|)
+operator|/
+literal|2
 expr_stmt|;
 block|}
 comment|/**      * Append a subdirectory to the tmp path.      * @param dp subdirecgtory name      */
@@ -1007,6 +1027,49 @@ return|return
 name|outWriters
 return|;
 block|}
+comment|/**      * Report status to JT so that JT won't kill this task if closing takes too long      * due to too many files to close and the NN is overloaded.      * @param lastUpdateTime the time (msec) that progress update happened.      * @return true if a new progress update is reported, false otherwise.      */
+specifier|private
+name|boolean
+name|updateProgress
+parameter_list|(
+name|long
+name|lastUpdateTime
+parameter_list|)
+block|{
+if|if
+condition|(
+name|reporter
+operator|!=
+literal|null
+operator|&&
+operator|(
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+operator|-
+name|lastUpdateTime
+operator|)
+operator|>
+name|timeOut
+condition|)
+block|{
+name|reporter
+operator|.
+name|progress
+argument_list|()
+expr_stmt|;
+return|return
+literal|true
+return|;
+block|}
+else|else
+block|{
+return|return
+literal|false
+return|;
+block|}
+block|}
 specifier|public
 name|void
 name|closeWriters
@@ -1017,6 +1080,14 @@ parameter_list|)
 throws|throws
 name|HiveException
 block|{
+name|long
+name|lastProgressReport
+init|=
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -1056,6 +1127,22 @@ argument_list|(
 name|abort
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|updateProgress
+argument_list|(
+name|lastProgressReport
+argument_list|)
+condition|)
+block|{
+name|lastProgressReport
+operator|=
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 catch|catch
 parameter_list|(
@@ -1084,6 +1171,14 @@ parameter_list|)
 throws|throws
 name|HiveException
 block|{
+name|long
+name|lastProgressReport
+init|=
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -1135,6 +1230,22 @@ index|]
 argument_list|)
 throw|;
 block|}
+if|if
+condition|(
+name|updateProgress
+argument_list|(
+name|lastProgressReport
+argument_list|)
+condition|)
+block|{
+name|lastProgressReport
+operator|=
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 catch|catch
 parameter_list|(
@@ -1175,6 +1286,14 @@ parameter_list|)
 throws|throws
 name|HiveException
 block|{
+name|long
+name|lastProgressReport
+init|=
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -1230,6 +1349,22 @@ index|]
 argument_list|,
 literal|true
 argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|updateProgress
+argument_list|(
+name|lastProgressReport
+argument_list|)
+condition|)
+block|{
+name|lastProgressReport
+operator|=
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
 expr_stmt|;
 block|}
 block|}
